# pre-commit-hooks

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml  rustpython_ci_linux.yml
doc-source/: Building.rst  Source.rst  conf.py  contributing.rst  docs.rst  index.rst
pre_commit_hooks/: __init__.py  bind_requirements.py  check_docstring_first.py  requirements_txt_sorter.py  util.py
tests/: bind_requirements_test.py  conftest.py  requirements.txt  requirements_txt_sorter_test.py  test_bind_requirements.py  test_check_docstring_first.py  test_requirements_txt_sorter.py  util_test.py
tests/cassettes/: test_integration[a_b_b].json  test_integration[a_c_b].json  test_integration[bad_specifiers].json  test_integration[bar_foo].json  test_integration[bar_foo_2].json  test_integration[bar_pkg-resources_foo].json  test_integration[comment_at_end].json  test_integration[comment_bar_comment_foo].json  test_integration[comment_barfoo_].json  test_integration[comment_foo_bar].json  test_integration[comment_foo_comment_bar].json  test_integration[foo_bar].json  test_integration[foo_bar_2].json  test_integration[foo_pkg-resources_bar].json  test_integration[not_on_pypi].json  test_integration[real_requirements].json  test_integration[url].json
tests/test_bind_requirements_/: test_integration_comment_bar_comment_foo_.md  test_integration_not_on_pypi_.md
