# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[options.entry_points]
console_scripts =
    requirements-txt-sorter = pre_commit_hooks.requirements_txt_sorter:main
    bind-requirements = pre_commit_hooks.bind_requirements:main
    check-docstring-first = pre_commit_hooks.check_docstring_first:main
